--- a/SlimeVolleyballLegacy.html
+++ b/SlimeVolleyballLegacy.html
@@ -173,7 +173,7 @@ var GAME_STATE_SHOW_WINNER = 5;
   var endOfPointText;
   var greenSlimeImage;
   var redSlimeImage;
-  var legacyGraphics;
+  var legacyGraphics = true;
 
 
   // GAME DATA
