--- a/SlimeVolleyballLegacy.html
+++ b/SlimeVolleyballLegacy.html
@@ -781,7 +781,7 @@ var GAME_STATE_SHOW_WINNER = 5;
     <h2>Options</h2><hr/><br/>
     <span class="SmallButton" onclick="hideOptions()" style="position:absolute;top:5px;right:5px;font-weight:bold;">close</span>
     <div style="text-align:left;margin:10px;">
-      <input id="LegacyGraphics" type="checkbox">Legacy Graphics</input>
+      <input id="LegacyGraphics" type="checkbox" checked>Legacy Graphics</input>
       <br/><br/>
       <h3>Debug Options</h3><br/>
         <input id="PhysicsLog" type="checkbox">Enable Physics Log</input>
